# traffic_stat

./: .env.example  .gitignore  LICENSE  README.md  collect.go  db.py  go.mod  main.py  plot.py  pyproject.toml  setup.sh  statistic.py  statistic_test.py  tgbot.py  tgbot_test.py  traffic_stat_bot.service  traffic_stat_collect.service
